--- a/index.html
+++ b/index.html
@@ -9562,8 +9562,8 @@ Error message and password prompt
 <div created="20200723095321183" modified="20200723095323944" title="$:/GitHub/Filename">
 <pre>index.html</pre>
 </div>
-<div created="20200723095316820" modified="20200723095317211" title="$:/GitHub/Repo">
-<pre>wiki</pre>
+<div created="20200723095316820" modified="20200723095713957" title="$:/GitHub/Repo">
+<pre>ajshopov/wiki</pre>
 </div>
 <div created="20200723095309332" modified="20200723095310034" title="$:/GitHub/Username">
 <pre>ajshopov</pre>
@@ -9583,7 +9583,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200723095301359" list="GettingStarted $:/ControlPanel" modified="20200723095301359" title="$:/StoryList">
+<div created="20200723095301359" list="$:/ControlPanel" modified="20200723095301359" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
