--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>test save</li>
+
 </ul>
 </p>
 
@@ -9583,7 +9585,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200723095301359" list="$:/ControlPanel" modified="20200723095301359" title="$:/StoryList">
+<div list="[[test save]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9752,6 +9754,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20200723104824636" modified="20200723104827978" tags="" title="test save">
+<pre></pre>
 </div>
 
 
