--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@ Error message and password prompt
 
 <li>$:/GitHub/Filename</li>
 
+<li>$:/GitHub/Path</li>
+
 <li>$:/GitHub/Repo</li>
 
 <li>$:/GitHub/Username</li>
@@ -158,6 +160,8 @@ Error message and password prompt
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
+
+<li>$:/state/tab/sidebar--595412856</li>
 
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
@@ -9564,6 +9568,9 @@ Error message and password prompt
 <div created="20200723095321183" modified="20200723095323944" title="$:/GitHub/Filename">
 <pre>index.html</pre>
 </div>
+<div created="20200723113539553" modified="20200723113539553" title="$:/GitHub/Path">
+<pre>/</pre>
+</div>
 <div created="20200723095316820" modified="20200723095713957" title="$:/GitHub/Repo">
 <pre>ajshopov/wiki</pre>
 </div>
@@ -9582,10 +9589,13 @@ Error message and password prompt
 <div created="20200723095306405" modified="20200723095306405" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
+<div created="20200723112958169" modified="20200723112958169" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
+</div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="[[test save]]" title="$:/StoryList">
+<div created="20200723112959595" list="$:/ControlPanel [[test save]]" modified="20200723113003481" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9601,19 +9611,19 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///Users/ajshopov/wdi/wiki/index.html&quot;
+            &quot;text&quot;: &quot;https://ajshopov.github.io/wiki/&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;ajshopov.github.io&quot;
         },
         &quot;$:/info/url/hostname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/hostname&quot;,
-            &quot;text&quot;: &quot;&quot;
+            &quot;text&quot;: &quot;ajshopov.github.io&quot;
         },
         &quot;$:/info/url/protocol&quot;: {
             &quot;title&quot;: &quot;$:/info/url/protocol&quot;,
-            &quot;text&quot;: &quot;file:&quot;
+            &quot;text&quot;: &quot;https:&quot;
         },
         &quot;$:/info/url/port&quot;: {
             &quot;title&quot;: &quot;$:/info/url/port&quot;,
@@ -9621,7 +9631,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/Users/ajshopov/wdi/wiki/index.html&quot;
+            &quot;text&quot;: &quot;/wiki/&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9629,7 +9639,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;file://&quot;
+            &quot;text&quot;: &quot;https://ajshopov.github.io&quot;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
