Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -173,6 +173,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>new note</li>
+
 <li>test save</li>
 
 </ul>
@@ -9568,7 +9570,7 @@ Error message and password prompt
 <div created="20200723095321183" modified="20200723095323944" title="$:/GitHub/Filename">
 <pre>index.html</pre>
 </div>
-<div created="20200723113539553" modified="20200723113539553" title="$:/GitHub/Path">
+<div created="20200723113708713" modified="20200723113708713" title="$:/GitHub/Path">
 <pre>/</pre>
 </div>
 <div created="20200723095316820" modified="20200723095713957" title="$:/GitHub/Repo">
@@ -9589,13 +9591,13 @@ Error message and password prompt
 <div created="20200723095306405" modified="20200723095306405" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20200723112958169" modified="20200723112958169" title="$:/state/tab/sidebar--595412856">
+<div created="20200723113655040" modified="20200723113655040" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200723112959595" list="$:/ControlPanel [[test save]]" modified="20200723113003481" title="$:/StoryList">
+<div created="20200723113655656" list="$:/ControlPanel [[new note]] [[test save]]" modified="20200723113705732" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9764,6 +9766,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20200723113657136" modified="20200723113701664" tags="" title="new note">
+<pre></pre>
 </div>
 <div created="20200723104824636" modified="20200723104827978" tags="" title="test save">
 <pre></pre>
