Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -153,13 +153,15 @@ Error message and password prompt
 
 <li>$:/GitHub/Username</li>
 
-<li>$:/Import</li>
+<li>$:/Import!!popup-Coronavirus Vaccine</li>
 
 <li>$:/Import!!popup-Coronavirus Vaccine.html</li>
 
 <li>$:/isEncrypted</li>
 
 <li>$:/SiteTitle</li>
+
+<li>$:/state/importpreviewtype</li>
 
 <li>$:/state/tab-1749438307</li>
 
@@ -176,6 +178,8 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
+
+<li>Coronavirus Vaccine</li>
 
 <li>Coronavirus Vaccine.html</li>
 
@@ -9585,13 +9589,11 @@ Error message and password prompt
 <div created="20200723095309332" modified="20200723095310034" title="$:/GitHub/Username">
 <pre>ajshopov</pre>
 </div>
-<div status="complete" title="$:/Import">
-<pre>The following tiddlers were imported:
-
-# [[Coronavirus Vaccine.html]]</pre>
-</div>
-<div created="20200723113854591" modified="20200723113854591" title="$:/Import!!popup-Coronavirus Vaccine.html">
+<div created="20200723113935952" modified="20200723113935952" title="$:/Import!!popup-Coronavirus Vaccine">
 <pre>yes</pre>
+</div>
+<div created="20200723113854591" modified="20200723114014187" title="$:/Import!!popup-Coronavirus Vaccine.html">
+<pre>no</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
@@ -9599,19 +9601,22 @@ Error message and password prompt
 <div created="20200723095251160" modified="20200723095252963" title="$:/SiteTitle">
 <pre>Commonplace</pre>
 </div>
+<div created="20200723113959978" modified="20200723114011872" title="$:/state/importpreviewtype">
+<pre>$:/core/ui/ImportPreviews/Text</pre>
+</div>
 <div created="20200723095304272" modified="20200723095304272" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
 <div created="20200723095306405" modified="20200723095306405" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20200723113655040" modified="20200723113834704" title="$:/state/tab/sidebar--595412856">
+<div created="20200723113655040" modified="20200723113949789" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Tools</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200723113744748" list="$:/Import" modified="20200723113744748" title="$:/StoryList">
+<div created="20200723113744748" list="[[Coronavirus Vaccine]] [[Coronavirus Vaccine.html]]" modified="20200723113941573" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9780,6 +9785,13 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div bag="default" created="20200723075438193" modified="20200723080311471" revision="0" title="Coronavirus Vaccine" type="text/vnd.tiddlywiki">
+<pre>Let me just give you one data point. ''In the last quarter century, there have only been seven, truly new vaccines introduced globally at the clinical practice. When I say new, that means that they were effective against a pathogen for which there had previously been no vaccine. They're only seven in the last quarter century, Merck has four, the rest of the world has three.'' I don't mean to boast. And there are lots of things that we've been working on since the eighties. We've been trying to get an HIV vaccine since the 1980s and we've been unsuccessful.
+
+Merck CEO Ken Frazier
+
+https://www.youtube.com/watch?v=KJMekwILAJo</pre>
 </div>
 <div title="Coronavirus Vaccine.html" type="text/html">
 <pre>&lt;!doctype html&gt;
