--- a/index.html
+++ b/index.html
@@ -163,9 +163,13 @@ Error message and password prompt
 
 <li>$:/state/importpreviewtype</li>
 
+<li>$:/state/tab-1163638994</li>
+
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
+
+<li>$:/state/tab/moresidebar-1850697562</li>
 
 <li>$:/state/tab/sidebar--595412856</li>
 
@@ -184,6 +188,8 @@ Error message and password prompt
 <li>Coronavirus Vaccine.html</li>
 
 <li>new note</li>
+
+<li>Sturgeon's law</li>
 
 <li>test save</li>
 
@@ -9604,19 +9610,25 @@ Error message and password prompt
 <div created="20200723113959978" modified="20200723114011872" title="$:/state/importpreviewtype">
 <pre>$:/core/ui/ImportPreviews/Text</pre>
 </div>
+<div created="20200723114512767" modified="20200723114513734" title="$:/state/tab-1163638994">
+<pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
+</div>
 <div created="20200723095304272" modified="20200723095304272" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
 <div created="20200723095306405" modified="20200723095306405" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20200723113655040" modified="20200723113949789" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div created="20200723114511720" modified="20200723114511720" title="$:/state/tab/moresidebar-1850697562">
+<pre>$:/core/ui/MoreSideBar/Plugins</pre>
+</div>
+<div created="20200723113655040" modified="20200723114510073" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200723113744748" list="[[Coronavirus Vaccine]] [[Coronavirus Vaccine.html]]" modified="20200723113941573" title="$:/StoryList">
+<div created="20200723114501296" list="[[Sturgeon's law]]" modified="20200723114501296" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12229,6 +12241,10 @@ body.tc-dirty span.tc-dirty-indicator svg {
 </div>
 <div created="20200723113657136" modified="20200723113701664" tags="" title="new note">
 <pre></pre>
+</div>
+<div created="20200723114952332" modified="20200723115014722" tags="" title="Sturgeon's law">
+<pre>Ninety percent of everything is crap
+- Theodore Sturgeon</pre>
 </div>
 <div created="20200723104824636" modified="20200723104827978" tags="" title="test save">
 <pre></pre>
