--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@ Error message and password prompt
 
 <li>$:/temp/info-plugin</li>
 
+<li>$:/temp/NewTagName</li>
+
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
@@ -9622,13 +9624,13 @@ Error message and password prompt
 <div created="20200723114511720" modified="20200723114511720" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Plugins</pre>
 </div>
-<div created="20200723113655040" modified="20200723114510073" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20200723113655040" modified="20200723115026583" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200723114501296" list="[[Sturgeon's law]]" modified="20200723114501296" title="$:/StoryList">
+<div created="20200723115028179" list="[[Coronavirus Vaccine]] [[Sturgeon's law]] [[new note]]" modified="20200723115031115" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9688,6 +9690,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20200723115238278" modified="20200723115242955" title="$:/temp/NewTagName">
+<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
 <pre>{
@@ -12239,7 +12244,7 @@ body.tc-dirty span.tc-dirty-indicator svg {
 &lt;/html&gt;
 </pre>
 </div>
-<div created="20200723113657136" modified="20200723113701664" tags="" title="new note">
+<div created="20200723113657136" modified="20200723115253061" tags="recipe" title="new note">
 <pre></pre>
 </div>
 <div created="20200723114952332" modified="20200723115014722" tags="" title="Sturgeon's law">
