--- a/index.html
+++ b/index.html
@@ -9631,13 +9631,13 @@ Error message and password prompt
 <div created="20200723114511720" modified="20200723115419389" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20200723113655040" modified="20200723115418302" title="$:/state/tab/sidebar--595412856">
+<div created="20200723113655040" modified="20200723115432035" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200723115028179" list="$:/AdvancedSearch [[$:/Import!!popup-Coronavirus Vaccine]] [[test save]] [[Coronavirus Vaccine]] [[Sturgeon's law]] [[new note]]" modified="20200723115420620" title="$:/StoryList">
+<div created="20200723115028179" list="[[test save]] [[Sturgeon's law]] [[new note]] recipe [[Coronavirus Vaccine]]" modified="20200723115439590" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9701,7 +9701,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200723115238278" modified="20200723115242955" title="$:/temp/NewTagName">
+<div created="20200723115238278" modified="20200723115529580" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div created="20200723115307577" modified="20200723115314376" title="$:/temp/search">
@@ -9830,8 +9830,8 @@ https://www.youtube.com/watch?v=KJMekwILAJo</pre>
 <pre>Ninety percent of everything is crap
 - Theodore Sturgeon</pre>
 </div>
-<div created="20200723104824636" modified="20200723115259240" tags="" title="test save">
-<pre>[tag[Recipe]]</pre>
+<div created="20200723104824636" modified="20200723115530747" tags="recipe" title="test save">
+<pre></pre>
 </div>
 
 
