--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@ Error message and password prompt
 
 <li>new note</li>
 
+<li>Recipes</li>
+
 <li>Sturgeon's law</li>
 
 <li>test save</li>
@@ -9637,7 +9639,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200723115028179" list="[[test save]] [[Sturgeon's law]] [[new note]] recipe [[Coronavirus Vaccine]]" modified="20200723115439590" title="$:/StoryList">
+<div created="20200723115028179" list="Recipes [[test save]] [[Sturgeon's law]] [[new note]] recipe [[Coronavirus Vaccine]]" modified="20200723115439590" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9825,6 +9827,9 @@ https://www.youtube.com/watch?v=KJMekwILAJo</pre>
 </div>
 <div created="20200723113657136" modified="20200723115253061" tags="recipe" title="new note">
 <pre></pre>
+</div>
+<div created="20200723115535321" modified="20200723115631421" tags="" title="Recipes">
+<pre>&lt;&lt;list-links &quot;[tag[recipe]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20200723114952332" modified="20200723115014722" tags="" title="Sturgeon's law">
 <pre>Ninety percent of everything is crap
