--- a/index.html
+++ b/index.html
@@ -9588,8 +9588,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200723095255122" modified="20200723095258703" title="$:/DefaultTiddlers">
-<pre></pre>
+<div created="20200723095255122" modified="20200723115750274" title="$:/DefaultTiddlers">
+<pre>[list[$:/StoryList]]</pre>
 </div>
 <div created="20200723095321183" modified="20200723095323944" title="$:/GitHub/Filename">
 <pre>index.html</pre>
@@ -9624,22 +9624,22 @@ Error message and password prompt
 <div created="20200723114512767" modified="20200723114513734" title="$:/state/tab-1163638994">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
-<div created="20200723095304272" modified="20200723095304272" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20200723095304272" modified="20200723115738441" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200723095306405" modified="20200723095306405" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
-<div created="20200723114511720" modified="20200723115419389" title="$:/state/tab/moresidebar-1850697562">
+<div created="20200723114511720" modified="20200723115657275" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20200723113655040" modified="20200723115432035" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20200723113655040" modified="20200723115802824" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Tools</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200723115028179" list="Recipes [[test save]] [[Sturgeon's law]] [[new note]] recipe [[Coronavirus Vaccine]]" modified="20200723115439590" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
