--- a/index.html
+++ b/index.html
@@ -193,6 +193,8 @@ Error message and password prompt
 
 <li>Coronavirus Vaccine</li>
 
+<li>hello</li>
+
 <li>new note</li>
 
 <li>Recipes</li>
@@ -9588,9 +9590,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200723095255122" modified="20200723121139563" title="$:/DefaultTiddlers">
-<pre>[[Coronavirus Vaccine]]
-[[Recipes]]</pre>
+<div created="20200723095255122" modified="20200723115750274" title="$:/DefaultTiddlers">
+<pre>[list[$:/StoryList]]</pre>
 </div>
 <div created="20200723095321183" modified="20200723095323944" title="$:/GitHub/Filename">
 <pre>index.html</pre>
@@ -9625,8 +9626,8 @@ Error message and password prompt
 <div created="20200723114512767" modified="20200723114513734" title="$:/state/tab-1163638994">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
-<div created="20200723095304272" modified="20200723121142174" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20200723095304272" modified="20200723115738441" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200723095306405" modified="20200723095306405" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -9634,13 +9635,13 @@ Error message and password prompt
 <div created="20200723114511720" modified="20200723115657275" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20200723113655040" modified="20200723121017012" title="$:/state/tab/sidebar--595412856">
+<div created="20200723113655040" modified="20200723121155805" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200723121112274" list="$:/ControlPanel" modified="20200723121112274" title="$:/StoryList">
+<div list="hello" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9825,6 +9826,9 @@ Error message and password prompt
 Merck CEO Ken Frazier
 
 https://www.youtube.com/watch?v=KJMekwILAJo</pre>
+</div>
+<div created="20200723121158006" modified="20200723121202920" tags="" title="hello">
+<pre>hi there</pre>
 </div>
 <div created="20200723113657136" modified="20200723115253061" tags="recipe" title="new note">
 <pre></pre>
