--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/AutoSave</li>
+
 <li>$:/core</li>
 
 <li>$:/DefaultTiddlers</li>
@@ -217,6 +219,9 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20200723121355537" modified="20200723121355537" title="$:/config/AutoSave">
+<pre>no</pre>
+</div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.22">
 <pre>{
     &quot;tiddlers&quot;: {
@@ -9590,8 +9595,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200723095255122" modified="20200723115750274" title="$:/DefaultTiddlers">
-<pre>[list[$:/StoryList]]</pre>
+<div created="20200723095255122" modified="20200723121139563" title="$:/DefaultTiddlers">
+<pre>[[Coronavirus Vaccine]]
+[[Recipes]]</pre>
 </div>
 <div created="20200723095321183" modified="20200723095323944" title="$:/GitHub/Filename">
 <pre>index.html</pre>
@@ -9626,22 +9632,22 @@ Error message and password prompt
 <div created="20200723114512767" modified="20200723114513734" title="$:/state/tab-1163638994">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
-<div created="20200723095304272" modified="20200723115738441" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20200723095304272" modified="20200723121142174" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200723095306405" modified="20200723095306405" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+<div created="20200723095306405" modified="20200723121351491" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/General</pre>
 </div>
 <div created="20200723114511720" modified="20200723115657275" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20200723113655040" modified="20200723121155805" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20200723113655040" modified="20200723121310929" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="hello" title="$:/StoryList">
+<div created="20200723121348925" list="hello [[Coronavirus Vaccine]] Recipes" modified="20200723121348925" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9827,8 +9833,8 @@ Merck CEO Ken Frazier
 
 https://www.youtube.com/watch?v=KJMekwILAJo</pre>
 </div>
-<div created="20200723121158006" modified="20200723121202920" tags="" title="hello">
-<pre>hi there</pre>
+<div created="20200723121311771" modified="20200723121341534" tags="" title="hello">
+<pre>hi there testing</pre>
 </div>
 <div created="20200723113657136" modified="20200723115253061" tags="recipe" title="new note">
 <pre></pre>
