--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
-<div created="20200723121355537" modified="20200723121355537" title="$:/config/AutoSave">
+<div created="20200723121458533" modified="20200723121458533" title="$:/config/AutoSave">
 <pre>no</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.22">
@@ -9595,7 +9595,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200723095255122" modified="20200723121139563" title="$:/DefaultTiddlers">
+<div created="20200723095255122" modified="20200723121442821" title="$:/DefaultTiddlers">
 <pre>[[Coronavirus Vaccine]]
 [[Recipes]]</pre>
 </div>
@@ -9632,22 +9632,22 @@ Error message and password prompt
 <div created="20200723114512767" modified="20200723114513734" title="$:/state/tab-1163638994">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
-<div created="20200723095304272" modified="20200723121142174" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20200723095304272" modified="20200723121502105" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20200723095306405" modified="20200723121351491" title="$:/state/tab-2065006209">
+<div created="20200723095306405" modified="20200723121422935" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
 </div>
 <div created="20200723114511720" modified="20200723115657275" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20200723113655040" modified="20200723121310929" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Open</pre>
+<div created="20200723113655040" modified="20200723121415725" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Tools</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200723121348925" list="hello [[Coronavirus Vaccine]] Recipes" modified="20200723121348925" title="$:/StoryList">
+<div created="20200723121417627" list="$:/ControlPanel hello" modified="20200723121417627" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9833,8 +9833,8 @@ Merck CEO Ken Frazier
 
 https://www.youtube.com/watch?v=KJMekwILAJo</pre>
 </div>
-<div created="20200723121311771" modified="20200723121341534" tags="" title="hello">
-<pre>hi there testing</pre>
+<div created="20200723121158006" modified="20200723121202920" tags="" title="hello">
+<pre>hi there</pre>
 </div>
 <div created="20200723113657136" modified="20200723115253061" tags="recipe" title="new note">
 <pre></pre>
