--- a/index.html
+++ b/index.html
@@ -9632,22 +9632,22 @@ Error message and password prompt
 <div created="20200723114512767" modified="20200723114513734" title="$:/state/tab-1163638994">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
-<div created="20200723095304272" modified="20200724233859548" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20200723095304272" modified="20200723121502105" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20200723095306405" modified="20200724233900758" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+<div created="20200723095306405" modified="20200723121422935" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/General</pre>
 </div>
 <div created="20200723114511720" modified="20200723115657275" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20200723113655040" modified="20200724233828834" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20200723113655040" modified="20200723121415725" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Tools</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200724233857615" list="[[New Vaccine History]] Recipes" modified="20200724233857615" title="$:/StoryList">
+<div list="[[New Vaccine History]] Recipes" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9711,7 +9711,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200723115238278" modified="20200724233851934" title="$:/temp/NewTagName">
+<div created="20200723115238278" modified="20200723115529580" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div created="20200723115307577" modified="20200723115314376" title="$:/temp/search">
@@ -9832,7 +9832,7 @@ Error message and password prompt
 <div created="20200723113657136" modified="20200723115253061" tags="recipe" title="new note">
 <pre></pre>
 </div>
-<div bag="default" created="20200723075438193" modified="20200724234005510" revision="0" tags="covid vaccine" title="New Vaccine History" type="text/vnd.tiddlywiki">
+<div bag="default" created="20200723075438193" modified="20200724234117940" revision="0" tags="covid vaccine" title="New Vaccine History" type="text/vnd.tiddlywiki">
 <pre>Let me just give you one data point. ''In the last quarter century, there have only been seven, truly new vaccines introduced globally at the clinical practice. When I say new, that means that they were effective against a pathogen for which there had previously been no vaccine. They're only seven in the last quarter century, Merck has four, the rest of the world has three.'' I don't mean to boast. And there are lots of things that we've been working on since the eighties. We've been trying to get an HIV vaccine since the 1980s and we've been unsuccessful.
 
 Merck CEO Ken Frazier
