Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@ Error message and password prompt
 
 <li>test save</li>
 
+<li>The Strength of Conformism</li>
+
 </ul>
 </p>
 
@@ -9595,8 +9597,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200723095255122" modified="20200723121442821" title="$:/DefaultTiddlers">
-<pre>[[Coronavirus Vaccine]]
+<div created="20200723095255122" modified="20200724234211708" title="$:/DefaultTiddlers">
+<pre>[[New Vaccine History]]
 [[Recipes]]</pre>
 </div>
 <div created="20200723095321183" modified="20200723095323944" title="$:/GitHub/Filename">
@@ -9641,13 +9643,13 @@ Error message and password prompt
 <div created="20200723114511720" modified="20200723115657275" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20200723113655040" modified="20200723121415725" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div created="20200723113655040" modified="20200724234214790" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="[[New Vaccine History]] Recipes" title="$:/StoryList">
+<div created="20200724234203323" list="[[The Strength of Conformism]] [[New Vaccine History]]" modified="20200724234217417" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9848,6 +9850,10 @@ https://www.youtube.com/watch?v=KJMekwILAJo</pre>
 </div>
 <div created="20200723104824636" modified="20200723115530747" tags="recipe" title="test save">
 <pre></pre>
+</div>
+<div created="20200724234223207" modified="20200724234255751" tags="" title="The Strength of Conformism">
+<pre>https://twitter.com/McCormickProf/status/1278529694355292161
+https://threader.app/thread/1278529694355292161</pre>
 </div>
 
 
