Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9649,7 +9649,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200724234203323" list="[[The Strength of Conformism]] [[New Vaccine History]]" modified="20200724234217417" title="$:/StoryList">
+<div created="20200724234351611" list="[[The Strength of Conformism]] [[New Vaccine History]] Recipes" modified="20200724234351611" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9851,8 +9851,20 @@ https://www.youtube.com/watch?v=KJMekwILAJo</pre>
 <div created="20200723104824636" modified="20200723115530747" tags="recipe" title="test save">
 <pre></pre>
 </div>
-<div created="20200724234223207" modified="20200724234255751" tags="" title="The Strength of Conformism">
-<pre>https://twitter.com/McCormickProf/status/1278529694355292161
+<div created="20200724234223207" modified="20200724234443764" tags="" title="The Strength of Conformism">
+<pre>I sometimes ask students what their position on slavery would have been had they been white and living in the South before abolition. Guess what? They all would have been abolitionists! They all would have bravely spoken out against slavery, and worked tirelessly against it.
+
+Of course, this is nonsense. Only the tiniest fraction of them, or of any of us, would have spoken up against slavery or lifted a finger to free the slaves. Most of them—and us—would have gone along. Many would have supported the slave system and happily benefited from it.
+
+So I respond by saying that I will credit their claims if they can show evidence of the following: that in leading their lives today they have stood up for the rights of unpopular victims of injustice whose very humanity is denied, and where they have done so knowing:
+
+(1) that it would make them unpopular with their peers, (2) that they would be loathed and ridiculed by powerful, influential individuals and institutions in our society; (3) that they would be abandoned by many of their friends, (4) that they would be called nasty names, and (5) that they would risk being denied valuable professional opportunities as a result of their moral witness.
+
+In short, my challenge is to show where they have at risk to themselves and their futures stood up for a cause that is unpopular in elite sectors of our culture today.
+
+Robert P. George
+
+https://twitter.com/McCormickProf/status/1278529694355292161
 https://threader.app/thread/1278529694355292161</pre>
 </div>
 
