Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -167,9 +167,15 @@ Error message and password prompt
 
 <li>$:/state/importpreviewtype</li>
 
+<li>$:/state/showeditpreview</li>
+
+<li>$:/state/tab--1371304472</li>
+
 <li>$:/state/tab--1498284803</li>
 
 <li>$:/state/tab-1163638994</li>
+
+<li>$:/state/tab-1319071802</li>
 
 <li>$:/state/tab-1335562222</li>
 
@@ -214,6 +220,8 @@ Error message and password prompt
 <li>test save</li>
 
 <li>The Strength of Conformism</li>
+
+<li>Writing Tip</li>
 
 </ul>
 </p>
@@ -9646,11 +9654,20 @@ Error message and password prompt
 <div created="20200723113959978" modified="20200723114011872" title="$:/state/importpreviewtype">
 <pre>$:/core/ui/ImportPreviews/Text</pre>
 </div>
+<div created="20200725042858975" modified="20200725042900804" title="$:/state/showeditpreview">
+<pre>no</pre>
+</div>
+<div created="20200725043052352" modified="20200725043052352" title="$:/state/tab--1371304472">
+<pre>$:/core/ui/TiddlerInfo/References</pre>
+</div>
 <div created="20200723115401731" modified="20200723115401731" title="$:/state/tab--1498284803">
 <pre>$:/core/ui/AdvancedSearch/Standard</pre>
 </div>
 <div created="20200723114512767" modified="20200723114513734" title="$:/state/tab-1163638994">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
+</div>
+<div created="20200725042838124" modified="20200725042838124" title="$:/state/tab-1319071802">
+<pre>$:/core/ui/TiddlerInfo/References</pre>
 </div>
 <div created="20200725033557403" modified="20200725033603729" title="$:/state/tab-1335562222">
 <pre>$:/core/ui/TiddlerInfo/Advanced</pre>
@@ -9673,7 +9690,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200725000014824" list="Home Recipes" modified="20200725034043816" title="$:/StoryList">
+<div created="20200725000014824" list="[[Writing Tip]] Home Recipes" modified="20200725034043816" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9737,7 +9754,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200723115238278" modified="20200723115529580" title="$:/temp/NewTagName">
+<div created="20200723115238278" modified="20200725042447829" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div created="20200723115307577" modified="20200725033729687" title="$:/temp/search">
@@ -9855,9 +9872,8 @@ Error message and password prompt
 <div created="20200723121158006" modified="20200723121202920" tags="" title="hello">
 <pre>hi there</pre>
 </div>
-<div created="20200725033150935" modified="20200725034756502" tags="" title="Home">
-<pre>Links to go here:
-&lt;&lt;list-links &quot;[tag[recipe]]&quot;&gt;&gt;
+<div created="20200725033150935" modified="20200725043653543" tags="" title="Home">
+<pre>
 
 All Links
 &lt;&lt;list-links &quot; [!is[system]]&quot;&gt;&gt;</pre>
@@ -9872,8 +9888,10 @@ Merck CEO Ken Frazier
 
 https://www.youtube.com/watch?v=KJMekwILAJo</pre>
 </div>
-<div created="20200723115535321" modified="20200725034743811" tags="" title="Recipes">
-<pre>&lt;&lt;list-links &quot;[tag[recipe]]&quot;&gt;&gt;</pre>
+<div created="20200723115535321" modified="20200725043125207" tags="" title="Recipes">
+<pre>&lt;&lt;list-links &quot;[tag[recipe]]&quot;&gt;&gt;
+
+[[Home]]</pre>
 </div>
 <div created="20200723114952332" modified="20200723115014722" tags="" title="Sturgeon's law">
 <pre>Ninety percent of everything is crap
@@ -9897,6 +9915,16 @@ Robert P. George
 
 https://twitter.com/McCormickProf/status/1278529694355292161
 https://threader.app/thread/1278529694355292161</pre>
+</div>
+<div created="20200725042431401" modified="20200725042917900" tags="[[paul graham]]" title="Writing Tip">
+<pre>Useful writing tells people something true and important that they didn't already know, and tells them as unequivocally as possible.
+
+Notice these are all a matter of degree. For example, you can't expect an idea to be novel to everyone. Any insight that you have will probably have already been had by at least one of the world's 7 billion people. But it's sufficient if an idea is novel to a lot of readers.
+
+Ditto for correctness, importance, and strength. In effect the four components are like numbers you can multiply together to get a score for usefulness. Which I realize is almost awkwardly reductive, but nonetheless true.
+
+Paul Graham http://paulgraham.com/useful.html
+</pre>
 </div>
 
 
