Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -225,8 +225,6 @@ Error message and password prompt
 
 <li>Contents</li>
 
-<li>hello</li>
-
 <li>Home</li>
 
 <li>new note</li>
@@ -9729,7 +9727,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="Home" title="$:/StoryList">
+<div created="20200725105841339" list="[[new note]] [[test save]] [[New Vaccine History]] [[The Strength of Conformism]] Recipes Contents Advice [[Writing Tip]] Home" modified="20200725105921126" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9926,9 +9924,6 @@ Error message and password prompt
 &lt;&lt;toc-selective-expandable 'Contents'&gt;&gt;
 
 &lt;/div&gt;</pre>
-</div>
-<div created="20200723121158006" modified="20200723121202920" tags="" title="hello">
-<pre>hi there</pre>
 </div>
 <div created="20200725033150935" modified="20200725044009937" tags="" title="Home">
 <pre>View [[All]]
