Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -199,7 +199,11 @@ Error message and password prompt
 
 <li>$:/state/tab/sidebar--595412856</li>
 
+<li>$:/state/toc/Contents-Advice-1637712383</li>
+
 <li>$:/state/toc/Contents-Advice-1843068618</li>
+
+<li>$:/state/toc/Contents-Quotes-1843068618</li>
 
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
@@ -230,6 +234,10 @@ Error message and password prompt
 <li>new note</li>
 
 <li>New Vaccine History</li>
+
+<li>Philosopher's Syndrome</li>
+
+<li>Quotes</li>
 
 <li>Recipes</li>
 
@@ -9718,16 +9726,22 @@ Error message and password prompt
 <div created="20200723114511720" modified="20200725045224358" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Tags</pre>
 </div>
-<div created="20200723113655040" modified="20200725045241858" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20200723113655040" modified="20200726073020535" title="$:/state/tab/sidebar--595412856">
+<pre>Contents</pre>
 </div>
-<div created="20200725045204458" modified="20200725045204458" title="$:/state/toc/Contents-Advice-1843068618">
+<div created="20200726072840939" modified="20200726072841461" title="$:/state/toc/Contents-Advice-1637712383">
+<pre>close</pre>
+</div>
+<div created="20200725045204458" modified="20200726072855462" title="$:/state/toc/Contents-Advice-1843068618">
+<pre>open</pre>
+</div>
+<div created="20200726073021428" modified="20200726073021428" title="$:/state/toc/Contents-Quotes-1843068618">
 <pre>open</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200725105841339" list="[[new note]] [[test save]] [[New Vaccine History]] [[The Strength of Conformism]] Recipes Contents Advice [[Writing Tip]] Home" modified="20200725105921126" title="$:/StoryList">
+<div created="20200726072817465" list="Home Quotes [[Philosopher's Syndrome]] Advice test [[Writing Tip]] Contents Recipes" modified="20200726072918958" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9791,7 +9805,7 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200723115238278" modified="20200725044507372" title="$:/temp/NewTagName">
+<div created="20200723115238278" modified="20200726072933946" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div created="20200723115307577" modified="20200725033729687" title="$:/temp/search">
@@ -9925,11 +9939,12 @@ Error message and password prompt
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20200725033150935" modified="20200725044009937" tags="" title="Home">
+<div created="20200725033150935" modified="20200726072631336" tags="" title="Home">
 <pre>View [[All]]
 
 * [[Recipes]]
-* [[Advice]]</pre>
+* [[Advice]]
+* [[Quotes]]</pre>
 </div>
 <div created="20200723113657136" modified="20200723115253061" tags="recipe" title="new note">
 <pre></pre>
@@ -9940,6 +9955,14 @@ Error message and password prompt
 Merck CEO Ken Frazier
 
 https://www.youtube.com/watch?v=KJMekwILAJo</pre>
+</div>
+<div created="20200726072710306" modified="20200726072935113" tags="Quotes" title="Philosopher's Syndrome">
+<pre>“Philosophers' Syndrome: mistaking a failure of the imagination for an insight into necessity.”
+
+Daniel C. Dennett, Consciousness Explained</pre>
+</div>
+<div created="20200726072807311" modified="20200726073018686" tags="Contents" title="Quotes">
+<pre>&lt;&lt;list-links &quot;[tag[Quotes]]&quot;&gt;&gt;</pre>
 </div>
 <div created="20200723115535321" modified="20200725044040851" tags="" title="Recipes">
 <pre>&lt;&lt;list-links &quot;[tag[recipe]]&quot;&gt;&gt;
