Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -249,6 +249,8 @@ Error message and password prompt
 
 <li>The Strength of Conformism</li>
 
+<li>Tyrannies</li>
+
 <li>Writing Tip</li>
 
 </ul>
@@ -9741,7 +9743,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200802070243548" list="Home All [[New Vaccine History]]" modified="20200802070245880" title="$:/StoryList">
+<div created="20200808014824337" list="Home Quotes [[Philosopher's Syndrome]] Tyrannies" modified="20200808014830657" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200723115340068" modified="20200723115349355" title="$:/temp/advancedsearch">
@@ -9994,6 +9996,12 @@ Robert P. George
 
 https://twitter.com/McCormickProf/status/1278529694355292161
 https://threader.app/thread/1278529694355292161</pre>
+</div>
+<div created="20200808014826827" modified="20200808015149818" tags="Quotes" title="Tyrannies">
+<pre>“Of all tyrannies, a tyranny sincerely exercised for the good of its victims may be the most oppressive. It would be better to live under robber barons than under omnipotent moral busybodies. The robber baron's cruelty may sometimes sleep, his cupidity may at some point be satiated; but those who torment us for our own good will torment us without end for they do so with the approval of their own conscience. They may be more likely to go to Heaven yet at the same time likelier to make a Hell of earth. This very kindness stings with intolerable insult. To be &quot;cured&quot; against one's will and cured of states which we may not regard as disease is to be put on a level of those who have not yet reached the age of reason or those who never will; to be classed with infants, imbeciles, and domestic animals.”
+
+
+C.S. Lewis, God in the Dock: Essays on Theology</pre>
 </div>
 <div created="20200725042431401" modified="20200725045221613" tags="[[paul graham]] Advice" title="Writing Tip">
 <pre>Useful writing tells people something true and important that they didn't already know, and tells them as unequivocally as possible.
